[package]
name = "docker_logdna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.8.0"
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
logdna-client = { git = "https://github.com/logdna/logdna-rust", branch = "main" }
gethostname = "0.4.3"

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
libc = "0.2.149"
logdna_mock = { path = "mock" }
ntest = "0.9.0"
tempfile = "3.8.0"

