[package]
name = "dind_test_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
logdna_mock = { path = "../mock" }
tokio = { version = "1.33.0", features = ["full"] }
gethostname = "0.4.3"
