[package]
name = "logdna_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.27"
logdna-mock-ingester = { git = "https://github.com/logdna/logdna-agent-v2" }
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1.33.0", features = ["full"] }

